recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:13: error: identifier expected but ')' found.
                 case levels => snowSide(levels-1,(lenght/3.));gauche(60);snowSide(levels-1,(lenght/3.));droite(120);snowSide(levels-1,(lenght/3.));gauche(60);snowSide(levels-1,(lenght/3.))
                                                            ^Koch:13: error: identifier expected but ')' found.
                 case levels => snowSide(levels-1,(lenght/3.));gauche(60);snowSide(levels-1,(lenght/3.));droite(120);snowSide(levels-1,(lenght/3.));gauche(60);snowSide(levels-1,(lenght/3.))
                                                                                                      ^Koch:13: error: identifier expected but ')' found.
                 case levels => snowSide(levels-1,(lenght/3.));gauche(60);snowSide(levels-1,(lenght/3.));droite(120);snowSide(levels-1,(lenght/3.));gauche(60);snowSide(levels-1,(lenght/3.))
                                                                                                                                                 ^Koch:13: error: identifier expected but ')' found.
                 case levels => snowSide(levels-1,(lenght/3.));gauche(60);snowSide(levels-1,(lenght/3.));droite(120);snowSide(levels-1,(lenght/3.));gauche(60);snowSide(levels-1,(lenght/3.))
                                                                                                                                                                                           ^